--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,26 +8,38 @@
   <div class="main-div">
     <!-- Content -->
     <div class="main-img-content">
+      <!-- image -->
       <div class="cell-img">
         <img src="./images/phones.png" alt="">
       </div>
-
+      <!-- text -->
       <div class="content">
-        <div class="">
-          Instagram
+        <div class="content-header">
+          <span> <img src="./images/brand.png" alt="Instagram logo"> </span>
+          <button>Log in</button>
         </div>
-        <div class="">
-          Capture and Share the World's Moments
+        <div class="content-body">
+          <h2>
+          Capture and Share <br> the World's Moments
+          </h2>
 
+          <p>
           Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
+          </p>
+
+          <p>
           Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
+          </p>
+
+          <p>
           Oh yeah, did we mention it's free?
+          </p>
         </div>
-        <div class="">
-          Download on the App Store
-          Get it on Google Play
+        <div class="content-bottom">
+          <span> <img src="./images/badge-iphone.png" alt="iOS Badge"> </span>
+          <span> <img src="./images/badge-android.png" alt="Android Badge"> </span>
         </div>
       </div>
     </div>
