--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
+
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="top-background"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div id="foreground">
 
-  Oh yeah, did we mention it's free?
+    <img src="./images/phones.png" alt="Phones" />
 
-  Download on the App Store
-  Get it on Google Play
+    <div id="foreground-right">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="foreground-right-items">
+        <img class="foreground-right-branding" src="./images/brand.png" alt="Instagram Branding" />
+        <button class="foreground-right-button" type="button">
+          <img src="./images/home.png" alt="" />
+          Log in
+        </button>
+      </div>
 
-  &copy; 2014 Instagram
+      <section id="info-section">
+        <h1>
+          Capture and Share the World's Moments
+        </h1>
+
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+
+        <div>
+          <img class="applestore" src="./images/badge-iphone.png" alt="Badge IPhone" />
+          <img src="./images/badge-android.png" alt="Badge Android" />
+        </div>
+      </section>
+
+    </div>
+
+  </div>
+
+
+  <footer>
+    <div id="footer">
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+      </nav>
+      <span class="copyright">
+        &copy; 2014 Instagram
+      </span>
+    </div>
+  </footer>
 </body>
+
 </html>
