--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <div class="main-container">
+      <img id="phones" src="/images/phones.png" alt="Instagram app" />
+      <div class="landing-text">
+        <div class="logo-box">
+          <img id="brand" src="/images/brand.png" alt="Instagram" />
+          <div class="login-button">
+            <img id="login-home-icon" src="/images/home.png" alt="login" />
+            <p>Log in</p>
+          </div>
+        </div>
+        <div class="intro-box">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share
+            your life with friends and family.
+          </p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div class="download-buttons">
+            <img
+              src="images/badge-iphone.png"
+              alt="Download on the App Store"
+            />
+            <img src="images/badge-android.png" alt="Get it on Google Play" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="footer-links">
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+      </div>
+      <p class="copyright">&copy; 2014 Instagram</p>
+    </footer>
+  </body>
 </html>
