--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="./css/main.css">
+
 <head>
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <main>
+    <section id="index">
+      <aside class="Phone">
+        <div class="imgPhone">
+          <img src="./images/phones.png" alt="phone">
+        </div>
+      </aside>
+      <section class="content">
+        <section class="logo">
+          <div class="imgBrand">
+            <img src="./images/brand.png" alt="brand">
+          </div>
+          <button>
+            <div class="buttonImg">
+              <div class="imgHome">
+                <img src="./images/home.png" alt="home"> log in
+              </div>
+            </div>
+          </button>
+        </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <article>
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        </article>
+        <article class="app">
+          <div class="imgIphone">
+            <a href="#" target="_blank">
+              <img src="./images/badge-iphone.png" alt="badge-iphone">
+            </a>
+          </div>
+          <div class="imgAnd">
+            <a href="#" target="_blank">
+              <img src="./images/badge-android.png" alt="badge-android">
+            </a>
+          </div>
+        </article>
+      </section>
+    </section>
+    <footer>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <a href="#"> About Us</a>
+      <a href="#">Support</a>
+      <a href="#"> Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      &copy; 2014 Instagram
+    </footer>
+  </main>
 </body>
+
+
+
 </html>
