--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,71 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="main-div">
+    <div>
+      <img src="./images/phones.png" alt="Two IPhones">
+    </div>
+    <div id="right-div">
+      <div id="lb-div">
+        <img src="./images/brand.png" alt="Instagram Logo">
+        <div id="btn-div">
+            <img src="./images/home.png" alt="Home">
+            <p>
+              Log in      
+            </p>
+        </div> 
+      </div>
+      <div id="capture-div">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your 
+            life with friends and family. <br><br>
+    
+            Take a picture or video, choose a filter to transform its look 
+            and feel, then post to Instagram &mdash; it's that easy. You can 
+            even share to Facebook, Twitter, Tumblr and more. It's a new
+             way to see the world. <br><br>
+          
+            Oh yeah, did we mention it's free?   
+        </p>
+        <img src="./images/badge-iphone.png" alt="Download on the App Store">
+        <img src="./images/badge-android.png" alt="Get in on Google Play">
+      </div>
+    </div>
+  </div>
+    <footer id="footer">
+        <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li id="li-grey">&copy; 2014 Instagram</li>
+          </ul>
+    </footer>
 </body>
 </html>
+
+  
+
+  
+  
+  
+  
+  
+  
+  
+  
+
+  
