--- a/index.html
+++ b/index.html
@@ -4,13 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="blue-bg"></div>
+    <section class="container">
+      <img src="images/phones.png" alt="Smartphones showing Instagram App" />
+      <div>
+        <div class="header-container">
+          <img class="logo" src="images/brand.png" alt="Instagram logo" />
+          <a class="btn" href="#"><img src="images/home.png" alt="" />Log in</a>
+        </div>
+        <div></div>
+        <div class="img-bg">
+          <h1>
+            Capture and Share <br />
+            the World's Moments
+          </h1>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+            <strong>fun</strong> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div>
+            <img
+              class="badge"
+              src="images/badge-iphone.png"
+              alt="Badge iPhone"
+            />
+            <img
+              class="badge"
+              src="images/badge-android.png"
+              alt="Badge Android"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>© 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
