--- a/index.html
+++ b/index.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="/styles/style.css" />
+</head>
+
+<body>
+
+  <header></header>
+  <section id="wrapper">
+    <div class="phone">
+      <img src="images/phones.png" alt="" />
+    </div>
+    <div class="imgBox">
+      <div class="logIn">
+        <img src="images/brand.png" alt="Instagram" />
+        <div>
+        <img class="home" src="images/home.png" alt="home" />
+        <button type="submit">Log In</button></div>
+      </div>
+      <section id="box-wrapper">
+        <div class="textcontainer">
+        <h1>Capture and Share the World's Moments</h1>
+
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and family.
+        </p>
+
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see
+          the world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+      
+      </section>
+      <div class="install">
+        <img src="images/badge-iphone.png" alt="" />
+        <img src="images/badge-android.png" alt="" />
+      </div>
+    </div>
+    </div>
+  </section>
+
+
+  <footer>
+    <div class="divFooter">
+      <nav class="navStyle">
+        <ul>
+          <li>About Us</li>
+          <li>Support </li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li> 
+          <li>Privacy</li> 
+          <li>Terms</li>
+          <span class="copy">&copy; 2014 Instagram</span>
+        </ul>
+      </nav>
+    </div>
+  </footer>
+</body>
+
 </html>
