--- a/index.html
+++ b/index.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="styles/style.css" />
+</head>
+
+<body>
+  <div id="back"></div>
+  <div id="super">
+    <div id="phones-image">
+      <img src="images/phones.png" alt="phones" />
+    </div>
+
+    <div id="box">
+
+      <div id="instagram-login">
+
+        <img src="images/brand.png" alt="instagram" />
+        <a id="login" href="#"><img src="images/home.png" alt="home" /><p>Log in</p></a>
+
+      </div>
+
+      <div id="content">
+        <h1>Instagram Capture and Share the World's Moments</h1>
+
+        <p>Instagram is a <strong>fast</strong>,<strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+
+        <div id="store">
+          <img src="images/badge-iphone.png" alt="iphone" />
+          <img src="images/badge-android.png" alt="iphone" />
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li><p>&copy; 2014 Instagram</p></li>
+    </ul>
+
+  </footer>
+
+
+
+</body>
+
 </html>
