--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="almost-everything">
+      <img src="./images/phones.png" alt="phones" />
+      <div class="everything-on-the-right">
+        <div class="brand-button">
+          <img src="./images/brand.png" alt="brand" />
+          <button>
+            <img src="./images/home.png" alt="home" /><span> Log in</span>
+          </button>
+        </div>
+        <main>
+          <section class="section1">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with
+              friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </section>
+          <section class="section2">
+            <img
+              src="./images/badge-iphone.png"
+              alt="Download on the App Store"
+            />
+            <img src="./images/badge-android.png" alt="Get it on Google Play" />
+          </section>
+        </main>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <span>&copy; 2014 Instagram</span>
+    </footer>
   </body>
 </html>
