--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
+
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="mainsection">
+   
+<div class="flex-item"><img src="./images/phones.png" alt="Iphone"> </div>
+<div class="rightside">
+  <div class="flex-item">
+  <div class="header">
+  <div><img src="./images/brand.png" alt="Instagram logo"></div>
+  <div><button class="button" type="button">Log in</button>
+  </div>
+</div>
+</div>
+<div class="container">
+  <h1>Capture and Share the World's Moments </h1>
+  <p>Instagram is a fast, beautiful and fun way to share your life </br>with
+    friends and family.</p> </br><p>Take a picture or video, choose a filter to transform its look</br> and feel, then post to Instagram
+    &mdash; it's that easy. You can </br>even share to Facebook, Twitter, Tumblr and more. It's a </br>new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+</div>
+<div class="icons"></div>
+    </div>
+  </div>
+<footer> <div>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>2014 Instagram</li>
+  </ul>
+</div>    
+ </footer>
+     
+ 
   </body>
 </html>
