--- a/index.html
+++ b/index.html
@@ -1,65 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Instagram Clone</title>
+    <link rel="stylesheet" href=styles/style.css>
+  </head>
+  <body>
+    <main>
+      <section>
+        <img src="images/phones.png" alt="Phones image" />
+      </section>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Instagram Clone</title>
-  <link rel="stylesheet" href=styles/style.css> </head> <body>
-  <main>
+      <section class="definition">
+        <header>
+          <img src="images/brand.png" alt="Logo instagram" />
+          <a href="#"><img src="images/home.png" alt="Home logo" />Log in</a>
+        </header>
 
-    <section>
+        <article class="capture-share">
+          <div>
+            <h1>CapturE and Share the World's Moments</h1>
+            <p>
+              Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+              share your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div>
+            <a href="#"
+              ><img src="images/badge-iphone.png" alt="Apple store logo"
+            /></a>
+            <a href="#"
+              ><img src="images/badge-android.png" alt="Google play store logo"
+            /></a>
+          </div>
+        </article>
+      </section>
+    </main>
 
-      <img src="images/phones.png"
-        alt="Phones image" />
-
-    </section>
-
-    <section class="definition">
-
-      <header>
-        <img src="images/brand.png"
-          alt="Logo instagram" />
-        <a href=#><img src="images/home.png"
-            alt="Home logo" />Log in</a>
-      </header>
-
-      <article class="capture-share">
-        <div>
-          <h1>Capture and Share the World's Moments</h1>
-          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
-          </p>
-          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
-            it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-          </p>
-          <p>Oh yeah, did we mention it's free?</p>
-        </div>
-        <div>
-          <a href=#><img src="images/badge-iphone.png"
-              alt="Apple store logo" /></a>
-          <a href=#><img src="images/badge-android.png"
-              alt="Google play store logo" /></a>
-        </div>
-      </article>
-
-    </section>
-
-  </main>
-
-  <footer>
-    <ul>
-      <li><a href=#>About Us</a></li>
-      <li><a href=#>Support</a></li>
-      <li><a href=#>Blog</a></li>
-      <li><a href=#>Press</a></li>
-      <li><a href=#>API</a></li>
-      <li><a href=#>Jobs</a></li>
-      <li><a href=#>Privacy</a></li>
-      <li><a href=#>Terms</a></li>
-      <li class="grey-footer">&copy; 2014 Instagram</li>
-    </ul>
-  </footer>
-
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li class="grey-footer">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
-
 </html>
