--- a/index.html
+++ b/index.html
@@ -12,18 +12,25 @@
         <div class="iphoneImage"> <img src="./images/phones.png" alt="phones"></div>
         
         <div>
+
+          <div class="brandAndLogin">
           <div><img src="./images/brand.png" alt="instagramBadge"></div>
+          <div><button><a href="#"></a><img class="home" src="./images/home.png" alt="home">Log in</a></button></div>
+          </div>
+
             <div class="mainText">
             <div><h3>Capture and Share <br>the World's Moments</h3></div>
           
             <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
-            friends and family. <br>
-            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-            - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
-            Oh yeah, did we mention it's free?</p>
-            <div>
-            <div><img src="./images/badge-iphone.png" alt="appStore"></div>
-            <div><img src="./images/badge-android.png" alt="googlePlay"></div>
+            friends and family. </p>
+            <p>Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram - it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="googlePlayAppStoreButtons">
+            <div><a href="#"><img src="./images/badge-iphone.png" alt="appStore"></a></div>
+            <div class="googlePlay"><a href="#"><img src="./images/badge-android.png" alt="googlePlay"></a></div>
             </div> 
             </div>
         </div> 
