--- a/index.html
+++ b/index.html
@@ -4,13 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="main-section">
+      <img id="phone-image" src="/images/phones.png" alt="Phones">
+      <div id="right-hand-side">
+        <section id="top-part">
+          <img src="/images/brand.png" alt="Instagram logo">
+          <div id="log-in"> 
+            <img src="/images/home.png" alt="Home icon">
+            <p>Log in</p>
+          </div>
+        </section>
+        <section id="main-text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div id="download-images">
+            <img src="/images/badge-iphone.png" alt="iPhone badge">
+            <img src="/images/badge-android.png" alt="Android badge">
+          </div>
+        </section>
+      </div>
+    </section>
+    <footer>
+      <ul id="footer-list">
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li id="copywright">&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </footer> 
   </body>
 </html>
